Refactor how settings and operation processors are passed into the resource processors